corrected deprecated functions